# contest-app

./: .gitignore  LICENSE  README.md  TCA_Timer_Design_Spec.docx  TCA_Timer_Design_Spec.docx.md  docker-compose.yml  package-lock.json  package.json  railway.json
.github/workflows/: desktop-release.yml  desktop.yml  server.yml  shared.yml  spa.yml
desktop/: Cargo.toml  README.md  index.html  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json  vite.config.ts
desktop/ctl/: Cargo.toml
desktop/ctl/src/: main.rs
desktop/ipc-proto/: Cargo.toml
desktop/ipc-proto/src/: lib.rs
desktop/ipc-server/: Cargo.toml
desktop/ipc-server/src/: lib.rs
desktop/ipc-server/tests/: loopback.rs
desktop/scripts/: build-ctl.mjs
desktop/src/: App.tsx  Overlay.tsx  colors.ts  fonts.ts  format.ts  layout.ts  main.tsx  overlayScreenInset.ts  overlayTextSize.ts  timer.ts  timesync.ts  types.ts  url.ts  ws-client.ts
desktop/src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns  source.manifest.json
desktop/src-tauri/icons/android/values/: ic_launcher_background.xml
desktop/src-tauri/src/: app_state.rs  config.rs  display_watch.rs  ipc_server.rs  main.rs  preferences.rs  windows_tray_promote.rs
desktop/src/components/: CountdownWithBorder.tsx
desktop/test/: colors.test.ts  format.test.ts  layout.test.ts  overlayScreenInset.test.ts  overlayTextSize.test.ts  timer.test.ts  timesync.test.ts  url.test.ts  ws-client.test.ts
server/: .dockerignore  .env.example  Dockerfile.dev  README.md  package-lock.json  package.json  railway.json  tsconfig.json
server/src/: clock.ts  help-queue.ts  index.ts  ratelimit.ts  retention.ts  rooms.ts  static.ts  timer.ts
server/src/auth/: cf-jwt.ts  identifiers.ts  identity.ts  oidc.ts  room-token.ts  session.ts
server/src/db/: dal.ts  migrate.ts  pool.ts  retry-drain.ts  schema.sql  seed-dev.ts
server/src/db/migrations/: 0000000000000_initial_scaffold.sql  001_initial.sql  002_room_key.sql
server/src/notify/: dispatcher.ts  quiet-hours.ts  ses.ts  twilio.ts
server/src/routes/: admin.ts  auth.ts  judge.ts  webhooks.ts
server/src/ws/: contestant.ts  judge.ts
server/test/: auth.test.ts  clock.test.ts  dispatcher.test.ts  frame-contract.test.ts  health.test.ts  help-queue.test.ts  help-reschedule.test.ts  help-station-version.test.ts  lifecycle.test.ts  oidc-session.test.ts  prefs.db.test.ts  quiet-hours.test.ts  ratelimit.test.ts  rest.test.ts  retention.test.ts  retry-drain.test.ts  timer.test.ts  webhooks.test.ts  write-audit-snapshot.test.ts  ws.integration.test.ts
shared/: README.md  package-lock.json  package.json  tsconfig.json
shared/src/: alarm.ts  colors.ts  compute.ts  format.ts  index.ts  timesync.ts  types.ts
shared/src/api/: index.ts
shared/test/: alarm.test.ts  colors.test.ts  compute.test.ts  format.test.ts  timesync.test.ts
spa/: .dockerignore  Dockerfile.dev  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
spa/src/: App.tsx  index.css  main.tsx
spa/src/api/: client.ts
spa/src/components/: AppLayout.tsx  ConnectionPill.tsx  CountdownWithBorder.tsx
spa/src/hooks/: useTimer.ts  useWebSocket.ts
spa/src/lib/: chime.ts  demoMode.ts  endTimerAlarm.ts  quietHours.ts  rooms.ts
spa/src/pages/: Help.tsx  Log.tsx  Projector.tsx  Rooms.tsx  Settings.tsx  Timer.tsx
spa/src/pwa/: manifest.webmanifest  sw.ts
spa/src/store/: index.ts  types.ts
spa/test/: chime.test.ts  countdownStyle.test.ts  demoMode.test.ts  offsetTracker.test.ts  quietHours.test.ts  rooms.test.ts  store.test.ts  useTimer.test.ts
