[workspace]
resolver = "2"
members = ["ipc-proto", "ipc-server", "ctl", "src-tauri"]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["TCANationals"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# interprocess gives us a single local-socket API that maps to Unix domain
# sockets on Linux/macOS and named pipes on Windows (§9.6).
interprocess = "2"
