[package]
name = "tca-timer-desktop"
description = "TCA Timer contestant overlay (scaffolding)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
tca-timer-ipc-server = { path = "../ipc-server" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "tca-timer-desktop"
path = "src/main.rs"
