[package]
name = "tca-timer-desktop"
description = "TCA Timer contestant overlay (scaffolding)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-single-instance = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tca-timer-ipc-server = { path = "../ipc-server" }
tca-timer-ipc-proto = { path = "../ipc-proto" }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows-sys = { version = "0.48", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_Com",
  "Win32_UI_Shell",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "tca-timer-desktop"
path = "src/main.rs"
